Support pem file

--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -9,3 +9,9 @@ user = "asteroidgazer"
 password = ""
 name = "asteroidgazer"
 ssl = "disabled"
+
+[actor]
+privatekey = "/etc/asteroidgazer/actor.pem"
+icon = ""
+image = ""
+summary = ""
